SignalDesigner enhanced, now with preview

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1857 1092 1537 1006
+MoveWindow IDM_APPL_WINDOW -1787 1139 1647 857
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -303 1385 301 226
+MoveWindow IDM_CRSR_WINDOW -310 1392 302 227
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -302 1086 301 301
+MoveWindow IDM_MINI_WINDOW -308 1096 302 302
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1849 1144 1521 924
+MoveWindow IDM_MAIN_WINDOW -1779 1191 1632 776
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -350 1275 301 301
+MoveWindow IDM_DESC_WINDOW -502 1206 302 302
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -1065 1338 762 398
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -310 1560 301 301
+MoveWindow IDM_MONITOR_WINDOW 200 0 137 202
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -310 1614 301 301
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -321 1825 301 281
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1449 1241 835 840
+MoveWindow IDM_PERF_WINDOW -403 1153 302 282
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -1369 1368 502 402
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
