Cleanup, optical fine tuning on Scales and SignalDesigner

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1787 1139 1647 857
+MoveWindow IDM_APPL_WINDOW -1948 1189 1648 858
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -310 1392 302 227
+MoveWindow IDM_CRSR_WINDOW -310 1392 303 228
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -308 1096 302 302
+MoveWindow IDM_MINI_WINDOW -308 1096 303 303
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1779 1191 1632 776
+MoveWindow IDM_MAIN_WINDOW -1940 1241 1634 778
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -502 1206 302 302
+MoveWindow IDM_DESC_WINDOW -502 1206 303 303
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW 200 0 137 202
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -310 1614 301 301
+MoveWindow IDM_MONITOR_WINDOW -909 1486 613 294
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PARAM_WINDOW -310 1614 302 302
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -403 1153 302 282
+MoveWindow IDM_PERF_WINDOW -403 1153 303 283
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -1369 1368 502 402
+MoveWindow IDM_SIG_DESIGNER -1626 1160 512 824
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
