--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -287,5 +287,11 @@
     <ClCompile Include="PosNob.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MicroSensor.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MicroSensor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
