--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -97,7 +97,7 @@
     <ClCompile Include="DelMicroSensorCmd.ixx" />
     <ClCompile Include="ExtendOutputLineCmd.ixx" />
     <ClCompile Include="AddPipe2NeuronCmd.ixx" />
-    <ClCompile Include="AddSensorSignalCmd.ixx" />
+    <ClCompile Include="AddSensorCmd.ixx" />
     <ClCompile Include="AddSigGen2MonitorCmd.ixx" />
     <ClCompile Include="ArrowAnimation.ixx" />
     <ClCompile Include="AttachSigGen2ConCmd.ixx" />
