--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1976 1104 1651 861
+MoveWindow IDM_APPL_WINDOW -1928 1109 1654 864
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -310 1392 303 228
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -308 1096 306 306
+MoveWindow IDM_MINI_WINDOW -308 1096 309 309
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1968 1156 1637 781
+MoveWindow IDM_MAIN_WINDOW -1920 1161 1640 784
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -502 1206 306 306
+MoveWindow IDM_DESC_WINDOW -502 1206 309 309
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -909 1486 616 297
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_MONITOR_WINDOW -1878 1288 619 492
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -310 1614 302 302
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -403 1153 303 283
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -584 1196 515 827
+MoveWindow IDM_SIG_DESIGNER -584 1196 518 830
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
