Win32_ file name prefix in NNetWindows removed

--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -603,33 +603,33 @@
     <ClCompile Include="TimeGraph.cpp" />
     <ClCompile Include="TimeGraph.ixx" />
     <ClCompile Include="UndoRedoMenu.ixx" />
-    <ClCompile Include="Win32_AppTitle.ixx" />
-    <ClCompile Include="Win32_CrsrWindow.cpp" />
-    <ClCompile Include="Win32_CrsrWindow.ixx" />
-    <ClCompile Include="Win32_DescriptionWindow.cpp" />
-    <ClCompile Include="Win32_DescriptionWindow.ixx" />
-    <ClCompile Include="Win32_MainWindow.cpp" />
-    <ClCompile Include="Win32_MainWindow.ixx" />
-    <ClCompile Include="Win32_MiniWindow.cpp" />
-    <ClCompile Include="Win32_MiniWindow.ixx" />
+    <ClCompile Include="AppTitle.ixx" />
+    <ClCompile Include="CrsrWindow.cpp" />
+    <ClCompile Include="CrsrWindow.ixx" />
+    <ClCompile Include="DescriptionWindow.cpp" />
+    <ClCompile Include="DescriptionWindow.ixx" />
+    <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="MainWindow.ixx" />
+    <ClCompile Include="MiniWindow.cpp" />
+    <ClCompile Include="MiniWindow.ixx" />
     <ClCompile Include="MonitorWindow.cpp" />
-    <ClCompile Include="Win32_NNetAppMenu.cpp" />
-    <ClCompile Include="Win32_NNetAppMenu.ixx" />
+    <ClCompile Include="NNetAppMenu.cpp" />
+    <ClCompile Include="NNetAppMenu.ixx" />
     <ClCompile Include="NNetAppWindow.cpp" />
     <ClCompile Include="NNetController.cpp" />
     <ClCompile Include="NNetController.ixx" />
-    <ClCompile Include="Win32_NNetWindow.cpp" />
-    <ClCompile Include="Win32_NNetWindow.ixx" />
-    <ClCompile Include="Win32_ParameterDlg.cpp" />
+    <ClCompile Include="NNetWindow.cpp" />
+    <ClCompile Include="NNetWindow.ixx" />
+    <ClCompile Include="ParameterDlg.cpp" />
     <ClCompile Include="Win32_ParameterDlg.ixx" />
-    <ClCompile Include="Win32_PerformanceWindow.cpp" />
-    <ClCompile Include="Win32_PerformanceWindow.ixx" />
-    <ClCompile Include="Win32_ScriptHook.ixx" />
-    <ClCompile Include="Win32_SimulationControl.cpp" />
-    <ClCompile Include="Win32_SimulationControl.ixx" />
-    <ClCompile Include="Win32_SlowMotionControl.ixx" />
-    <ClCompile Include="Win32_Status.cpp" />
-    <ClCompile Include="Win32_Status.ixx" />
+    <ClCompile Include="PerformanceWindow.cpp" />
+    <ClCompile Include="PerformanceWindow.ixx" />
+    <ClCompile Include="ScriptHook.ixx" />
+    <ClCompile Include="SimulationControl.cpp" />
+    <ClCompile Include="SimulationControl.ixx" />
+    <ClCompile Include="SlowMotionControl.ixx" />
+    <ClCompile Include="Status.cpp" />
+    <ClCompile Include="Status.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Toolbox\Direct2D\Direct2D.vcxproj">
