--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Win32_NNetWindow.cpp">
+    <ClCompile Include="NNetWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NNetController.cpp">
@@ -24,7 +24,7 @@
     <ClCompile Include="Preferences.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_NNetAppMenu.cpp">
+    <ClCompile Include="NNetAppMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ComputeThread.cpp">
@@ -33,31 +33,31 @@
     <ClCompile Include="TimeDisplay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_CrsrWindow.cpp">
+    <ClCompile Include="CrsrWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_MiniWindow.cpp">
+    <ClCompile Include="MiniWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NNetAppWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_ParameterDlg.cpp">
+    <ClCompile Include="ParameterDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_PerformanceWindow.cpp">
+    <ClCompile Include="PerformanceWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_SimulationControl.cpp">
+    <ClCompile Include="SimulationControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_Status.cpp">
+    <ClCompile Include="Status.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SlowMotionDisplay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_MainWindow.cpp">
+    <ClCompile Include="MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MonitorWindow.cpp">
@@ -66,7 +66,7 @@
     <ClCompile Include="Measurement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_DescriptionWindow.cpp">
+    <ClCompile Include="DescriptionWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NNetWrappers.cpp">
@@ -96,16 +96,16 @@
     <ClCompile Include="Measurement.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_AppTitle.ixx">
+    <ClCompile Include="AppTitle.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_PerformanceWindow.ixx">
+    <ClCompile Include="PerformanceWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_SimulationControl.ixx">
+    <ClCompile Include="SimulationControl.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_Status.ixx">
+    <ClCompile Include="Status.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ComputeThread.ixx">
@@ -117,7 +117,7 @@
     <ClCompile Include="UndoRedoMenu.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_ScriptHook.ixx">
+    <ClCompile Include="ScriptHook.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SignalDesigner.ixx">
@@ -126,13 +126,13 @@
     <ClCompile Include="Preferences.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_CrsrWindow.ixx">
+    <ClCompile Include="CrsrWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_DescriptionWindow.ixx">
+    <ClCompile Include="DescriptionWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_SlowMotionControl.ixx">
+    <ClCompile Include="SlowMotionControl.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NNetController.ixx">
@@ -150,10 +150,10 @@
     <ClCompile Include="Win32_ParameterDlg.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_MiniWindow.ixx">
+    <ClCompile Include="MiniWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_NNetAppMenu.ixx">
+    <ClCompile Include="NNetAppMenu.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SignalPreview.ixx">
@@ -162,10 +162,10 @@
     <ClCompile Include="TimeGraph.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_MainWindow.ixx">
+    <ClCompile Include="MainWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_NNetWindow.ixx">
+    <ClCompile Include="NNetWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NNetAppWindow.ixx">
