--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="WrapActiveSigGen.ixx" />
     <ClCompile Include="NobIo.ixx" />
     <ClCompile Include="WrapDescription.ixx" />
+    <ClCompile Include="WrapEmphasized.ixx" />
     <ClCompile Include="WrapGlobalParameter.ixx" />
     <ClCompile Include="WrapNrOfNobs.ixx" />
     <ClCompile Include="WrapNrOfTracks.ixx" />
