--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1858 1116 -1858 1116
+MoveWindow IDM_APPL_WINDOW -1783 1126 1653 863
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -631 1098 -631 1098
-ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -337 1339 -337 1339
+MoveWindow IDM_CRSR_WINDOW 0 300 308 233
+ShowWindow IDM_CRSR_WINDOW SW_HIDE
+MoveWindow IDM_MINI_WINDOW -411 1373 308 308
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1850 1168 -1850 1168
+MoveWindow IDM_MAIN_WINDOW -1775 1178 1638 782
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -502 1206 -502 1206
+MoveWindow IDM_DESC_WINDOW 0 0 308 308
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -1886 1757 -1886 1757
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -316 1785 -316 1785
+MoveWindow IDM_MONITOR_WINDOW 200 0 143 208
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -371 1799 307 307
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -403 1153 -403 1153
+MoveWindow IDM_PERF_WINDOW 0 0 308 288
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -733 1190 -733 1190
+MoveWindow IDM_SIG_DESIGNER -1047 1600 508 408
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
