DeleteSenssorCmd new design

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1812 1138 1671 881
+MoveWindow IDM_APPL_WINDOW -1812 1138 1675 885
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 326 251
+MoveWindow IDM_CRSR_WINDOW 0 300 330 255
 ShowWindow IDM_CRSR_WINDOW SW_HIDE
-MoveWindow IDM_MINI_WINDOW -411 1373 326 326
+MoveWindow IDM_MINI_WINDOW -411 1373 330 330
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1804 1190 1656 800
+MoveWindow IDM_MAIN_WINDOW -1804 1190 1660 804
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW 0 0 326 326
+MoveWindow IDM_DESC_WINDOW 0 0 330 330
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW 200 0 161 226
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -371 1799 325 325
+MoveWindow IDM_MONITOR_WINDOW -1888 1718 494 230
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PARAM_WINDOW -371 1799 329 329
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 326 306
+MoveWindow IDM_PERF_WINDOW 0 0 330 310
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -803 1327 735 558
+MoveWindow IDM_SIG_DESIGNER -803 1327 739 562
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
