--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="NewIoLinePairCmd.ixx" />
     <ClCompile Include="NewSigGenCmd.ixx" />
     <ClCompile Include="NNetCommand.ixx" />
+    <ClCompile Include="NNetCommands.ixx" />
     <ClCompile Include="NNetCommandStack.ixx" />
     <ClCompile Include="NNetModelCommands.cpp" />
     <ClCompile Include="NNetModelCommands.ixx" />
