--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="NNetModelCommands.ixx" />
     <ClCompile Include="PlugIoConnectorsCmd.ixx" />
     <ClCompile Include="PlugIoLinesCmd.ixx" />
+    <ClCompile Include="RedoCommand.ixx" />
     <ClCompile Include="RenameSigGenCmd.ixx" />
     <ClCompile Include="ResetModelCmd.ixx" />
     <ClCompile Include="RotateModelCommand.ixx" />
@@ -158,6 +159,7 @@
     <ClCompile Include="StartStimulusCmd.ixx" />
     <ClCompile Include="ToggleEmphModeCmd.ixx" />
     <ClCompile Include="ToggleStopOnTriggerCmd.ixx" />
+    <ClCompile Include="UndoCommand.ixx" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
