--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1812 1127 1662 952
+MoveWindow IDM_APPL_WINDOW -1984 1227 1653 863
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 386 311
-ShowWindow IDM_CRSR_WINDOW SW_HIDE
-MoveWindow IDM_MINI_WINDOW -411 1312 386 447
+MoveWindow IDM_CRSR_WINDOW -326 1382 308 233
+ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW -328 1082 308 308
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1804 1179 1647 871
+MoveWindow IDM_MAIN_WINDOW -1976 1279 1638 782
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW 0 0 386 386
-ShowWindow IDM_DESC_WINDOW SW_HIDE
-MoveWindow IDM_MONITOR_WINDOW -1888 1718 550 286
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -561 1603 385 385
+MoveWindow IDM_DESC_WINDOW -316 1806 308 308
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MONITOR_WINDOW 200 0 143 208
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+MoveWindow IDM_PARAM_WINDOW -736 1603 277 387
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 386 366
-ShowWindow IDM_PERF_WINDOW SW_HIDE
-MoveWindow IDM_SIG_DESIGNER -830 1313 795 618
+MoveWindow IDM_PERF_WINDOW -312 1526 308 288
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -1810 1766 508 408
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
