--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1877 1180 1661 871
+MoveWindow IDM_APPL_WINDOW -1896 1141 1576 877
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -326 1382 316 241
+MoveWindow IDM_CRSR_WINDOW -326 1382 322 247
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -328 1082 316 316
+MoveWindow IDM_MINI_WINDOW -295 1082 289 322
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1869 1232 1646 790
+MoveWindow IDM_MAIN_WINDOW -1888 1193 1561 796
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -316 1806 316 316
+MoveWindow IDM_DESC_WINDOW -316 1806 322 322
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW 200 0 151 216
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
-MoveWindow IDM_PARAM_WINDOW -736 1603 285 395
+MoveWindow IDM_MONITOR_WINDOW -1812 1479 316 252
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PARAM_WINDOW -736 1603 291 401
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -312 1526 316 296
+MoveWindow IDM_PERF_WINDOW -312 1526 322 302
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -1810 1766 516 416
+MoveWindow IDM_SIG_DESIGNER -891 1194 522 422
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
