--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1896 1141 1600 901
+MoveWindow IDM_APPL_WINDOW -1903 1159 1628 929
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -326 1382 346 271
+MoveWindow IDM_CRSR_WINDOW -326 1382 374 299
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -295 1082 313 346
+MoveWindow IDM_MINI_WINDOW -295 1082 341 374
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1888 1193 1585 820
+MoveWindow IDM_MAIN_WINDOW -1895 1211 1613 848
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -316 1806 346 346
+MoveWindow IDM_DESC_WINDOW -316 1806 374 374
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1812 1479 340 276
+MoveWindow IDM_MONITOR_WINDOW -1749 1418 368 343
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -736 1603 315 425
+MoveWindow IDM_PARAM_WINDOW -736 1603 343 453
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -312 1526 346 326
+MoveWindow IDM_PERF_WINDOW -312 1526 374 354
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -987 1252 547 467
-ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+MoveWindow IDM_SIG_DESIGNER -562 1111 575 495
+ShowWindow IDM_SIG_DESIGNER SW_HIDE
