--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1903 1159 1628 929
+MoveWindow IDM_APPL_WINDOW -1903 1159 1630 931
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -326 1382 374 299
+MoveWindow IDM_CRSR_WINDOW -326 1382 376 301
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -295 1082 341 374
+MoveWindow IDM_MINI_WINDOW -295 1082 343 376
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1895 1211 1613 848
+MoveWindow IDM_MAIN_WINDOW -1895 1211 1615 850
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DESC_WINDOW -316 1806 374 374
+MoveWindow IDM_DESC_WINDOW -316 1806 376 376
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MONITOR_WINDOW -1749 1418 368 343
+MoveWindow IDM_MONITOR_WINDOW -1749 1418 370 345
 ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PARAM_WINDOW -736 1603 343 453
+MoveWindow IDM_PARAM_WINDOW -736 1603 345 455
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -312 1526 374 354
+MoveWindow IDM_PERF_WINDOW -312 1526 376 356
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_SIG_DESIGNER -562 1111 575 495
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+MoveWindow IDM_SIG_DESIGNER -465 1111 480 892
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
